<resources>
    <string name="app_name">myIF</string>
    <string name="cari_pengumuman">Cari Pengumuman</string>
    <string name="pengumuman">Pengumuman</string>
    <string name="undangan">Undangan</string>
    <string name="pertemuan">Pertemuan</string>
    <string name="frs">FRS</string>
    <string name="pengaturan">Pengaturan Akun</string>
    <string name="title">Title</string>
    <string name="waktu">Waktu</string>
    <string name="tag">tag</string>
    <string name="tambah_pengumuman">Tambah Pengumuman</string>
    <string name="judul">Judul</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="simpan">SIMPAN</string>
    <string name="tambah_pertemuan">Tambah Pertemuan</string>
    <string name="pilih_waktu_mulai">Pilih Waktu Mulai</string>
    <string name="pilih_tanggal">Pilih Tanggal Mulai</string>
    <string name="pilih_tanggalSelesai">Pilih Tanggal Akhir</string>
    <string name="pilih_waktu_akhir">Pilih Waktu Akhir</string>
    <string name="berikutnya">BERIKUTNYA</string>
    <string name="_1">1</string>
    <string name="dosen">Pilih Dosen</string>
    <string name="pilih__jadwal_dosen">Lihat Jadwal Dosen</string>
    <string name="pilih_dosen">Pilih Dosen</string>
    <string name="tambah_partisipan">Tambah Partisipan</string>
    <string name="informasi">Informasi</string>
    <string name="utama">Utama</string>
    <string name="akademik">Akademik</string>
    <string name="lainlain">Lain-lain</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="tambah_tag">Tambah Tag</string>
    <string name="title_semester">Title Semester</string>
    <string name="semester_tahun_ajaran">Semester - Tahun Ajaran</string>
    <string name="mata_kuliah">Mata Kuliah</string>
    <string name="detail">DETAIL</string>
    <string name="cari_tag">Cari Tag</string>
    <string name="apply">APPLY</string>
    <string name="start_date_pick">pick start date</string>
    <string name="end_date_pick">pick end date</string>
    <string name="tanggal">tanggal</string>
    <string name="start_time">start time : </string>
    <string name="end_time">end time : </string>
    <string name="start_date">start date : </string>
    <string name="end_date">end date : </string>
    <string name="description">desc : </string>
    <string name="organized_by">organized by : </string>
    <string name="add">ADD</string>
    <string name="organized_by_me">organized by me</string>
    <string name="lihat_jadwal_dosen">lihat jadwal dosen</string>
    <string name="mon">monday</string>
    <string name="tue">tuesday</string>
    <string name="wed">wednesday</string>
    <string name="thu">thursday</string>
    <string name="fri">friday</string>
    <string name="sat">saturday</string>
    <string name="sun">sunday</string>
    <string name="status">attending : </string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="prasyarat_tidak_terpenuhi">Prasyarat Tidak Terpenuhi</string>
</resources>