<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    android:background="@color/creammuda">

    <HorizontalScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:id="@+id/hari_wrapper"
        android:layout_margin="10dp">

        <com.google.android.material.chip.ChipGroup
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/chip_mon"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/mon"
                android:fontFamily="@font/ralewayregular"/>

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/chip_tue"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/tue"
                android:fontFamily="@font/ralewayregular"/>

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/chip_wed"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/wed"
                android:fontFamily="@font/ralewayregular"/>

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/chip_thu"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/thu"
                android:fontFamily="@font/ralewayregular"/>

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/chip_fri"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/fri"
                android:fontFamily="@font/ralewayregular"/>

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/chip_sat"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/sat"
                android:fontFamily="@font/ralewayregular"/>

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/chip_sun"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/sun"
                android:fontFamily="@font/ralewayregular"/>
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@id/hari_wrapper"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/ralewaybold"
                android:text="Jadwal Kosong Dosen"
                android:textSize="30sp"
                android:textColor="@color/black"></TextView>

            <ListView
                android:id="@+id/list_kosong_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ListView>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_baseline_add_24"
        app:borderWidth="0dp"
        android:backgroundTint="@color/birulebihmuda"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="25dp"/>
</RelativeLayout>