<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/creammuda">
    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/creammuda"
        android:src="@drawable/ic_close_fill0_wght400_grad0_opsz24"></ImageButton>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:fontFamily="@font/ralewaybold"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:text="Jadwal Dosen"
            android:textColor="@color/hitam"
            android:textSize="30sp"
            android:textAlignment="center"></TextView>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:layout_width="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/et_email_dosen"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:fontFamily="@font/ralewayregular"
                        android:hint="Email dosen"
                        android:id="@+id/dropdownSearch"
                        android:inputType="none"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <ImageButton
                android:src="@drawable/ic_baseline_search_24"
                android:id="@+id/tombolSearch"
                android:layout_alignParentRight="true"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_width="wrap_content"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/birutua"
                android:layout_weight="1"></ImageButton>

        </LinearLayout>

        <HorizontalScrollView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:id="@+id/chip_mon"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/mon"
                    android:fontFamily="@font/ralewayregular"/>

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:id="@+id/chip_tue"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/tue"
                    android:fontFamily="@font/ralewayregular"/>

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:id="@+id/chip_wed"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/wed"
                    android:fontFamily="@font/ralewayregular"/>

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:id="@+id/chip_thu"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/thu"
                    android:fontFamily="@font/ralewayregular"/>

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:id="@+id/chip_fri"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/fri"
                    android:fontFamily="@font/ralewayregular"/>

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:id="@+id/chip_sat"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/sat"
                    android:fontFamily="@font/ralewayregular"/>

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:id="@+id/chip_sun"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/sun"
                    android:fontFamily="@font/ralewayregular"/>
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <ListView
            android:id="@+id/list_container"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"></ListView>
    </LinearLayout>
</RelativeLayout>


